Fix Layout Issues - Modal, Footer, Sidebar Height, and Header Alignment

--- a/Partners-Portal/src/app/components/payment-request/new-payment-request/new-payment-request.component.scss
+++ b/Partners-Portal/src/app/components/payment-request/new-payment-request/new-payment-request.component.scss
@@ -21,7 +21,7 @@
   flex: 1;
   padding: 30px;
   position: relative;
-  margin-top: -70px;
+  margin-top: -100px;
   z-index: 10;
 }
 
@@ -318,7 +318,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  z-index: 1000;
+  z-index: 2000;
   padding: 20px;
 }
 
