--- a/Partners-Portal/src/app/components/payment-request/payment-request.component.scss
+++ b/Partners-Portal/src/app/components/payment-request/payment-request.component.scss
@@ -22,14 +22,14 @@
   flex: 1;
   padding: 30px;
   position: relative;
-  margin-top: -70px;
+  margin-top: -100px;
   z-index: 10;
 }
 
 .card-header {
   width: 100%;
   border-radius: 15px 15px 0 0;
-  height: 60px;
+  height: 46px;
   display: flex;
   align-items: center;
   justify-content: space-between;
