--- a/Partners-Portal/src/app/components/shared/footer/footer.component.scss
+++ b/Partners-Portal/src/app/components/shared/footer/footer.component.scss
@@ -6,17 +6,19 @@
   text-align: center;
   border-top: 1px solid rgba(255, 255, 255, 0.1);
   margin-top: auto;
-  margin-left: 0;
-  width: 100%;
+  margin-left: -280px;
+  width: calc(100% + 280px);
   box-shadow: 0 -4px 20px rgba(28, 53, 87, 0.1);
   color: $white;
+  position: relative;
+  z-index: 1000;
 }
 
 .footer-text {
   font-size: 14px;
   color: $white;
   display: inline-block;
-  padding-left: 0;
+  padding-left: 280px;
   font-family: 'Poppins', sans-serif;
   width: 100%;
   text-align: center;
