--- a/Partners-Portal/src/app/components/shared/header/header.component.scss
+++ b/Partners-Portal/src/app/components/shared/header/header.component.scss
@@ -9,7 +9,7 @@
   border-radius: 20px;
   margin: 20px;
   overflow: hidden;
-  min-height: 80px;
+  min-height: 100px;
 }
 
 .header-background {
